--- a/index.html.html
+++ b/index.html.html
@@ -18,7 +18,7 @@
 <body>
 	<header>
 	<div class="navbar">
-			<img src="file:///C:/Users/user/Desktop/10JO/images/Flag-Ethiopia.webp " class="logo">
+			<img src="images/Flag-Ethiopia.webp " class="logo">
 			<h6>SIDAMA NATIONAL REGIONAL STATE REVENUE AUTHORITY<br>ሲዳማ ብሔራዊ ክልላዊ መንግሥት ገቢዎች ባለሥልጣን</h6>
 
 			<nav>
@@ -41,7 +41,7 @@
 				</ul>
 			</nav>
 			<div class="logo1">
-    	<img src="file:///C:/Users/user/Desktop/10JO/images/Flag_of_Sidama.svg.png.png" width="125px">
+    	<img src="images/Flag_of_Sidama.svg.png.png" width="125px">
 			
 		</div>
 		
@@ -62,7 +62,7 @@ By realizing joint and integrated working system with the Federal ministry of Re
 		<div class="card">
 					
 					<div class="image-section">
-	<img src="file:///C:/Users/user/Desktop/10JO/images/ha.jpg-PhotoRoom.png-PhotoRoom.png">
+	<img src="images/ha.jpg-PhotoRoom.png-PhotoRoom.png">
 	
 </div>
 <div class="article">
