--- a/dep1.html
+++ b/dep1.html
@@ -72,7 +72,7 @@
 		<div class="card">
 					
 					<div class="image-section">
-	<img src="file:///C:/Users/user/Desktop/10JO/images/col.jpeg.jpg">
+	<img src="images/col.jpeg.jpg">
 	
 </div>
 <div class="article">
