--- a/service01.html
+++ b/service01.html
@@ -59,7 +59,7 @@
 		<div class="card">
 					
 					<div class="image-section">
-	<img src="file:///C:/Users/user/Desktop/10JO/images/Capture06.PNG">
+	<img src="images/Capture06.PNG">
 	
 </div>
 <div class="article">
