--- a/index.html.html
+++ b/index.html.html
@@ -18,7 +18,7 @@
 <body>
 	<header>
 	<div class="navbar">
-			<img src="images/Flag-Ethiopia.webp " class="logo">
+			<img src="images/Flag-Ethiopia.webp.png " class="logo">
 			<h6>SIDAMA NATIONAL REGIONAL STATE REVENUE AUTHORITY<br>ሲዳማ ብሔራዊ ክልላዊ መንግሥት ገቢዎች ባለሥልጣን</h6>
 
 			<nav>
