--- a/index.html.html
+++ b/index.html.html
@@ -41,7 +41,7 @@
 				</ul>
 			</nav>
 			<div class="logo1">
-    	<img src="images/Flag_of_Sidama.svg.png.png" width="125px">
+    	<img src="images/Flag_of_Sidama.svg.png" width="125px">
 			
 		</div>
 		
